Fix header spacing overwrites

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -61,6 +61,7 @@
     &:last-child {
       background: rgba($color-black, .5);
       border-radius: $border-radius-std;
+      box-shadow: $shadow-std;
     }
   }
 }
