--- a/src/styles/legacy/custom.scss
+++ b/src/styles/legacy/custom.scss
@@ -413,11 +413,6 @@ h3 {
 		margin-bottom: 25px !important;
 	}
 }
-/* Amazon style search bar */
-.header-type-default .logo {
-	width: inherit;
-	margin-right: 5px;
-}
 .search_text {
 	width: 349px;
 	margin-left: 15px;
